feat(responsive): add responsive layout
add responsive layout from 320 up to 1280 px
and add header to check how it works

--- a/index.html
+++ b/index.html
@@ -3,15 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>Front End | V I | П</title>
+    <script src="assets\js\script.js" async></script>
 </head>
 
 <body>
-    <h1>Ilya Verny</h1>
+<div class="main-wrapper">
 
-    Front End Dev
-    
+  <header class="header">
+    <div class="container container--px">
+        <nav class="header__menu">
+            <div class="hide-for-mobile">
+                <ul class="header__menu__items">
+                    <li class="header__menu__item">
+                        <a class="header__menu__link container--py" href="#">Главная</a>
+                    </li>
+                    <li class="header__menu__item">
+                        <a class="header__menu__link container--py" href="#">Проекты</a>
+                    </li>
+                    <li class="header__menu__item">
+                        <a class="header__menu__link container--py" href="#">Биография</a>
+                    </li>
+                    <li class="header__menu__item">
+                        <a class="header__menu__link container--py" href="#">Резюме</a>
+                    </li>
+                    <li class="header__menu__item">
+                        <a class="header__menu__link container--py" href="#">Контакты</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="hide-for-desktop">
+                <div class="humburger__menu">
+                    <div class="humburger__menu__button">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+
+  </header>  
+
+</div>
 </body>
-
 </html>
