feat(ribbon) add responsive ribbon to left side

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div class="main-wrapper">
 
   <header class="header">
+
     <div class="container container--px">
         <nav class="header__menu">
             <div class="hide-for-mobile">
@@ -46,6 +47,14 @@
     </div>
 
   </header>  
+
+  <section class="hero">
+    <div class="hero__ribbon">
+        
+    </div>
+
+  </section>
+
 
 </div>
 </body>
