fix(alt text): missing photo alt text
add alt text to photo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
         <div class="hero__content--photo-column">
-            <img class="hero__photo" src="./assets/img/photo.png" alt="">
+            <img class="hero__photo" src="./assets/img/photo.png" alt="Фото соискателя. Илья.">
             
         </div>
         <div class="hero__content--main-column">
