feat(header and hero grid) change flex to grid
header and hero section change from flex to grid to provide
better responsive layout

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </li>
         </ul>
     </nav>
-    <nav class="navigation__humburger-menu hide-for-desktop grid--right-column grid--navigation-row">
-        <div class="humburger__menu__button">
+    <nav class="navigation__humburger-menu hide-for-desktop grid--right-column grid--navigation-row container--pt container--pr">
+        <div class="navigation__humburger-menu__button">
             <span></span>
             <span></span>
             <span></span>
@@ -46,13 +46,13 @@
 
     <!-- <section class="hero "> -->
         <!-- <div class="hero__content"> -->
-            <div class="hero__ribbon--wrapper grid--left-column grid--hero-row">
+            <div class="hero__ribbon--wrapper grid--left-column grid--navigation-row">
                 <div class="hero__ribbon--color"></div>
                 <!-- <div class="hero__ribbon--right-column"></div> -->
             </div>
 
             
-            <div class="hero__content--photo-column grid--left-column grid--hero-row">
+            <div class="hero__content--photo-column grid--main-column grid--photo-row">
                 <img class="hero__photo " src="./assets/img/photo.png" alt="Фото соискателя. Илья.">
 
             </div>
