feat(hero-section): add transparent bubble
design element in the hero section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                     <a class="hero__cv cta" href="#">Резюме</a>
                 </div>
             </div>
+
+            <div class="hero__bubble bubble--sm"></div>
         <!-- </div> -->
     <!-- </section> -->
 
