feat(title): add style to title
style title and add left and right lines and circles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 <div class="main-wrapper">
 
-
-  <header class="header grid">
+    <header class="header grid">
 
     <!-- <div class="container container--px"> -->
     <nav class="navigaion__links-menu hide-for-mobile grid--main-column grid--navigation-row">
@@ -71,14 +70,26 @@
                 </div>
             </div>
 
-            <div class="hero__bubble bubble--sm"></div>
+            <div class="hero__bubble bubble"></div>
         <!-- </div> -->
     <!-- </section> -->
 
-  </header>
+    </header>
 
+    <section class="skills container--px">
+        <div class="title">
+            <div class="title__left">
+                <div class="title__circle"></div>
+                <div class="title__line"></div>
+            </div>
+            <div class="bubble bubble--title"><h2>Навыки</h2></div>
+            <div class="title__right">
+                <div class="title__line"></div>
+                <div class="title__circle"></div>
+            </div>
+        </div>
 
-
+    </section>
 </div>
 </body>
 </html>
