feat(skill-circle-bar): basic animation template
add basic html and css animation template to circle progress bar

--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
             </div>
         </div>
 
+
+
+        <div class="progress">
+            <div class="progress-outer">
+                <div class="progress-inner">
+                    <div class="progress-percentage">70%</div>
+                </div>
+            </div>
+
+            <svg class="progress-stroke" width="50" height="50">
+                <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                transform="rotate(-90, 25, 25)"/>
+            </svg>
+        </div>
+
+        
+
     </section>
 </div>
 </body>
