--- a/index.html
+++ b/index.html
@@ -91,14 +91,57 @@
 
 
 
-        <div class="progress">
+        <div id="progress-circle__js" class="progress">
             <div class="progress-outer">
                 <div class="progress-inner">
-                    <div class="progress-percentage">70%</div>
+                    <div class="progress-number">70</div>
+                    <div class="progress-percentage">%</div>
                 </div>
             </div>
 
-            <svg class="progress-stroke" width="50" height="50">
+            <svg class="progress-stroke js" width="50" height="50">
+                <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                transform="rotate(-90, 25, 25)"/>
+            </svg>
+        </div>
+
+        <div id="progress-circle__html" class="progress">
+            <div class="progress-outer">
+                <div class="progress-inner">
+                    <div class="progress-number">20</div>
+                    <div class="progress-percentage">%</div>
+                </div>
+            </div>
+
+            <svg class="progress-stroke html" width="50" height="50">
+                <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                transform="rotate(-90, 25, 25)"/>
+            </svg>
+        </div>
+
+        <div id="progress-circle__css" class="progress">
+            <div class="progress-outer">
+                <div class="progress-inner">
+                    <div class="progress-number">75</div>
+                    <div class="progress-percentage">%</div>
+                </div>
+            </div>
+
+            <svg class="progress-stroke css" width="50" height="50">
+                <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                transform="rotate(-90, 25, 25)"/>
+            </svg>
+        </div>
+
+        <div id="progress-circle__react" class="progress">
+            <div class="progress-outer">
+                <div class="progress-inner">
+                    <div class="progress-number">25</div>
+                    <div class="progress-percentage">%</div>
+                </div>
+            </div>
+
+            <svg class="progress-stroke react" width="50" height="50">
                 <circle r="20" cx="25" cy="25" stroke-linecap="round"
                 transform="rotate(-90, 25, 25)"/>
             </svg>
