feat(skills) add skill grid structure
add skill gird structure, alignment and styles

--- a/index.html
+++ b/index.html
@@ -90,64 +90,225 @@
         </div>
 
 
+        <div class="skill-progress-grid">
+            <div class="skill-flex-container">
+                <div id="skill-progress__js" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">70</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
 
-        <div id="progress-circle__js" class="progress">
-            <div class="progress-outer">
-                <div class="progress-inner">
-                    <div class="progress-number">70</div>
-                    <div class="progress-percentage">%</div>
+                    <svg class="progress-stroke js" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
                 </div>
+
+                <div class="skill-name">JavaScript</div>
             </div>
 
-            <svg class="progress-stroke js" width="50" height="50">
-                <circle r="20" cx="25" cy="25" stroke-linecap="round"
-                transform="rotate(-90, 25, 25)"/>
-            </svg>
-        </div>
 
-        <div id="progress-circle__html" class="progress">
-            <div class="progress-outer">
-                <div class="progress-inner">
-                    <div class="progress-number">20</div>
-                    <div class="progress-percentage">%</div>
+            <div class="skill-flex-container">
+                <div id="skill-progress__html" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">20</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke html" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
                 </div>
+
+                <div class="skill-name">React</div>
             </div>
 
-            <svg class="progress-stroke html" width="50" height="50">
-                <circle r="20" cx="25" cy="25" stroke-linecap="round"
-                transform="rotate(-90, 25, 25)"/>
-            </svg>
-        </div>
+            <div class="skill-flex-container">
+                <div id="skill-progress__css" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">75</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
 
-        <div id="progress-circle__css" class="progress">
-            <div class="progress-outer">
-                <div class="progress-inner">
-                    <div class="progress-number">75</div>
-                    <div class="progress-percentage">%</div>
+                    <svg class="progress-stroke css" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
                 </div>
+
+                <div class="skill-name">HTML</div>
             </div>
 
-            <svg class="progress-stroke css" width="50" height="50">
-                <circle r="20" cx="25" cy="25" stroke-linecap="round"
-                transform="rotate(-90, 25, 25)"/>
-            </svg>
-        </div>
 
-        <div id="progress-circle__react" class="progress">
-            <div class="progress-outer">
-                <div class="progress-inner">
-                    <div class="progress-number">25</div>
-                    <div class="progress-percentage">%</div>
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
                 </div>
+
+                <div class="skill-name">React Native</div>
             </div>
 
-            <svg class="progress-stroke react" width="50" height="50">
-                <circle r="20" cx="25" cy="25" stroke-linecap="round"
-                transform="rotate(-90, 25, 25)"/>
-            </svg>
-        </div>
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
 
-        
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">CSS</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">JSON</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">SASS</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">VS Code</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">TypeScript</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">BEM</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">GIT</div>
+            </div>
+
+            <div class="skill-flex-container">
+                <div id="skill-progress__react" class="progress">
+                    <div class="progress-outer">
+                        <div class="progress-inner">
+                            <div class="progress-number">25</div>
+                            <div class="progress-percentage">%</div>
+                        </div>
+                    </div>
+
+                    <svg class="progress-stroke react" width="50" height="50">
+                        <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                        transform="rotate(-90, 25, 25)"/>
+                    </svg>
+                </div>
+
+                <div class="skill-name">Figma</div>
+            </div>
+        </div>
 
     </section>
 </div>
