feat(skills) styles and structure
finished basic structure and styles

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
             </div>
         </div>
 
-
         <div class="skill-progress-grid">
             <div class="skill-flex-container">
                 <div id="skill-progress__js" class="progress">
@@ -308,6 +307,29 @@
 
                 <div class="skill-name">Figma</div>
             </div>
+        </div>
+
+        <p class="skill-note">  
+            * - Процент изучения установлен субъективно для позиции Junior.
+            Получить точную "картину" возможно в процессе собеседования.
+        </p>
+
+        <div class="languages skill-flex-container">
+            <div id="skill-progress__en" class="progress">
+                <div class="progress-outer">
+                    <div class="progress-inner">
+                        <div class="progress-number">70</div>
+                        <div class="progress-percentage">%</div>
+                    </div>
+                </div>
+
+                <svg class="progress-stroke en" width="50" height="50">
+                    <circle r="20" cx="25" cy="25" stroke-linecap="round"
+                    transform="rotate(-90, 25, 25)"/>
+                </svg>
+            </div>
+
+            <div class="skill-name">English</div>
         </div>
 
     </section>
