feat(skills) fade in effect
add fade in effect to elements

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <section class="skills container--px">
-        <div class="title">
+        <div class="title invisible">
             <div class="title__left">
                 <div class="title__circle"></div>
                 <div class="title__line"></div>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="skill-progress-grid">
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__js" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -109,7 +109,7 @@
             </div>
 
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__html" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -127,7 +127,7 @@
                 <div class="skill-name">React</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__css" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -146,7 +146,7 @@
             </div>
 
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -164,7 +164,7 @@
                 <div class="skill-name">React Native</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -182,7 +182,7 @@
                 <div class="skill-name">CSS</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -200,7 +200,7 @@
                 <div class="skill-name">JSON</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -218,7 +218,7 @@
                 <div class="skill-name">SASS</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -236,7 +236,7 @@
                 <div class="skill-name">VS Code</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -254,7 +254,7 @@
                 <div class="skill-name">TypeScript</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -272,7 +272,7 @@
                 <div class="skill-name">BEM</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -290,7 +290,7 @@
                 <div class="skill-name">GIT</div>
             </div>
 
-            <div class="skill-flex-container">
+            <div class="skill-flex-container invisible">
                 <div id="skill-progress__react" class="progress">
                     <div class="progress-outer">
                         <div class="progress-inner">
@@ -309,12 +309,12 @@
             </div>
         </div>
 
-        <p class="skill-note">  
+        <p class="skill-note invisible">  
             * - Процент изучения установлен субъективно для позиции Junior.
             Получить точную "картину" возможно в процессе собеседования.
         </p>
 
-        <div class="languages skill-flex-container">
+        <div class="languages skill-flex-container invisible">
             <div id="skill-progress__en" class="progress">
                 <div class="progress-outer">
                     <div class="progress-inner">
